# simpleinfo

./: .gitignore  FASTINFO_OVERVIEW.md  README.md  buildfile.m  calcinfo.m  calcpmi.m  calcsmi.m  eqpopbin.m  example_info.m  mmbiasinfo.m  pyproject.toml  setup_simpleinfo.m
.github/workflows/: ci.yml  matlab-release.yml
benchmarks/: README.md  __init__.py  comparative_fastinfo.py  run_comparative_benchmarks.py  run_matlab_benchmarks.m  run_matlab_comparative_benchmarks.m  run_matlab_dtype_benchmarks.m  run_python_benchmarks.py  run_python_comparative_benchmarks.py  run_python_dtype_benchmarks.py
examples/: bias_example.m  pmismi_illustration_figure.m
matlab/: calccmi.m  calccmi_slice.m  calccoi.m  calccondcmi.m  calcinfo.m  calcinfomatched.m  calcinfoperm.m  calcinfoperm_slice.m  calcpairwiseinfo.m  calcpairwiseinfo_slice.m  calcpcoi.m  calcpmi.m  calcsmi.m  eqpopbin.m  mmbiascmi.m  mmbiascoi.m  mmbiasinfo.m  numbase2dec.m  numdec2base.m  rebin.m
matlab/+fastinfo/: calccmi.m  calccmi_slice.m  calccondcmi.m  calcinfo.m  calcinfo_slice.m  calcinfomatched.m  calcinfoperm.m  calcinfoperm_slice.m  calcpairwiseinfo.m  calcpairwiseinfo_slice.m  eqpop.m  eqpop_slice.m  eqpop_sorted.m  eqpop_sorted_slice.m
matlab/+fastinfo/private/: ensure_native_path.m  eqpop_reference.m  eqpop_sorted_reference.m  maybe_warn_failed_pages.m  resolve_threads.m  validate_native_integer_class.m  warn_if_quantized.m
matlab/cpp_mex/: README.md
matlab/tests/: run_simpleinfo_validation_tests.m
python/: simpleinfo.py
tests/: test_comparative_fastinfo.py  test_simpleinfo.py
(+31 files in other folders)
