[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simpleinfo"
version = "0.1.0"
description = "Simple calculation of binned information theoretic quantities."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numba>=0.60.0",
    "numpy",
    "scipy",
]

[tool.hatch.build.targets.wheel]
packages = ["python/src/simpleinfo"]

[tool.hatch.build.targets.sdist]
include = [
    "/python/src/simpleinfo",
    "/README.md",
    "/pyproject.toml",
]
